--- a/src/sass/blocks/page.sass
+++ b/src/sass/blocks/page.sass
@@ -122,7 +122,7 @@
         transition: all 0.5s ease
         &:hover
             background: linear-gradient(45deg,#700ED2,#FF3838) border-box
-    &__link
-    &_purple
+        &_notTransparent
+            background: linear-gradient(45deg,#700ED2,#FF3838) border-box
 
     /* __page__ */
