--- a/src/sass/styles-sprites.sass
+++ b/src/sass/styles-sprites.sass
@@ -4,34 +4,70 @@
 
 .icon-tw-png
     +sprite($icon-tw-png)
+
 .icon-tw-webp
     +sprite($icon-tw-webp)
+
 .icon-cart-png
     +sprite($icon-cart-png)
+
 .icon-chat-png
     +sprite($icon-chat-png)
+
 .icon-facebook
     +sprite($icon-facebook-png)
+
 .icon-info-png
     +sprite($icon-info-png)
+
 .icon-instagram
     +sprite($icon-instagram-png)
+
 .icon-location-png
     +sprite($icon-location-png)
+
 .icon-mail-png
     +sprite($icon-mail-png)
+
 .icon-phone-png
     +sprite($icon-phone-png)
+
 .icon-youtube
     +sprite($icon-youtube-png)
+
 .icon-lifetime-png
     +sprite($icon-lifetime-png)
+
 .icon-return-png
     +sprite($icon-return-png)
+
 .icon-free-png
     +sprite($icon-free-png)
+
 .icon-arrow-white-details
     +sprite($icon-arrow-white-details-png)
     min-width: 11px
+
 .icon-close
     +sprite($icon-close-png)
+
+.icon-close-red
+    +sprite($icon-close-red-png)
+
+.icon-arrow-left
+    +sprite($icon-arrow-left-white-png)
+    
+.icon-arrow-left-black
+    +sprite($icon-arrow-left-black-png)
+
+.icon-arrow-right
+    +sprite($icon-arrow-left-white-png)
+    transform: rotate(180deg)
+
+.icon-arrow-right-black
+    +sprite($icon-arrow-left-black-png)
+    transform: rotate(180deg)
+
+//FIXME: cascad for modal 
+.modalGallary .icon-close
+    +sprite($icon-close-red-png)
