--- a/src/components/modals/modalGallary.component.pug
+++ b/src/components/modals/modalGallary.component.pug
@@ -1,3 +1,15 @@
 //-modalGallary
 +modal("modalGallary", "modalGallary")
-    img(src="assets/images/png/imgGallaryPopup1.png", alt="imgGallaryPopup")
+    .sliderBtn
+        button.btnSlider.prev 
+            i.icon-arrow-left
+        button.btnSlider.next  
+            i.icon-arrow-right
+    .swiper
+        .swiper-wrapper
+            .swiper-slide 
+                img(src="assets/images/png/imgGallaryPopup1.png", alt="imgGallaryPopup")
+            .swiper-slide 
+                img(src="assets/images/png/imgGallaryPopup1.png", alt="imgGallaryPopup")
+            .swiper-slide 
+                img(src="assets/images/png/imgGallaryPopup1.png", alt="imgGallaryPopup")
