--- a/src/components/products/products.component.pug
+++ b/src/components/products/products.component.pug
@@ -17,7 +17,7 @@ mixin item(titelH3, textBefore, imgSrc, productsItemGains, textAfter, textBtn1)
         p.productsItemTextAfter=textAfter
         .productsItemActions 
             button.page__btn LEARN MORE
-            button.page__btn=textBtn1
+            button.page__btn.page__btn_notTransparent=textBtn1
 
 section.products 
     h2.page__title-h2.page__title-h2_big shop 
