--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -16,5 +16,6 @@ block append style
             
 	
 block append script
-	script(src="/js/faq/faq.component.js")
 	script(src="libs/js/swiper-bundle.min.js")
+	script(src="/js/faq/faq.component.js")
+	script(src="/js/modals/modalGallary.component.js")
