add answer page

--- a/src/components/header/header.component.pug
+++ b/src/components/header/header.component.pug
@@ -2,7 +2,8 @@ header.header
     .wrapper
         .headerFlexContainer
             .headerLogo
-                img(src="assets/images/png/logo.png", alt="logo")
+                a(href="/") 
+                    img(src="assets/images/png/logo.png", alt="logo")
             .headerNav
                 nav.headerNavLinks
                     a.headerLink(href="javascript:void(0)") RS chip 
@@ -11,6 +12,7 @@ header.header
                     a.headerLink(href="javascript:void(0)") Tuning 
                     a.headerLink(href="javascript:void(0)") Support 
                     a.headerLink(href="javascript:void(0)") Contact us
+                    a.headerLink(href="faq/faq.html") faq
                 .headerNavCart
                     .icon-cart-png
                     .headerNavCart__count 3
