--- a/src/components/header/header.component.sass
+++ b/src/components/header/header.component.sass
@@ -83,11 +83,14 @@ html
     align-items: center
     +sm-block
         margin-left: 4%
+        margin-left: 0
     +md-block
         margin-left: 5%
+        margin-left: 0
         margin-right: 0
     +lg-block
         margin-left: 5%
+        margin-left: 0
         margin-right: 0
     &__count
         display: flex
