--- a/src/pages/faq/faq.pug
+++ b/src/pages/faq/faq.pug
@@ -14,7 +14,14 @@ block content
 			h2.page__title-h2.page__title-h2_big SUPPORT 
 				span.page__title-h2_small.page__title-h2_absolute Find Answers
 				span FAQ
-		include ../../components/faq/faq.component.pug
+		include ../../components/faq/faqBig.component.pug
+		section.usEmail
+			.wrapper
+				p.page__text Can't find the answer you're interested in? Email us. 
+					a(href="javascript:void(0)").page_red rschiphelp@gmail.com 
+					| or
+		include ../../components/form/form.component.pug
+		
 
 block modals
 	
